[tool.poetry]
name = "beyond-the-basic-stuff"
version = "0.1.0"
description = ""
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "beyond_the_basic_stuff"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
lint.ignore = [
    # tests use assert
    "S101"
]
